crates/wdl-grammar/tests/parsing/unbound-decl-in-output/source.errors
error: expected `=`, but found `}`
  ┌─ tests/parsing/unbound-decl-in-output/source.wdl:9:5
  │
9 │     }
  │     ^ unexpected `}`

